fix(css): button with even spacing

--- a/src/newtab.css
+++ b/src/newtab.css
@@ -59,8 +59,8 @@ pre {
 	position: absolute;
 	top: 0;
 	left: 0;
-	margin: 0rem;
-	padding: 1rem;
+	margin: 0;
+	padding: 0.75rem 1.5rem;
 	background-color: transparent;
 	border: none;
 	z-index: 200;
